up design layout

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             </div>
 
             <div class="col-md-6">
-              
+
               <h3 class="my-3">TerraMA² versão 4.0 - ALPHA 1 <span class="badge badge-primary">New</span></h3>
               <p>A plataforma TerraMA² necessita de inovações que atenda as aplicações diversas. Nesse sentido, estamos passando por uma reestruturação grande na base de nosso produto.</p>
 
@@ -303,11 +303,82 @@
   <!-- /.Container -->
 
   <!-- Footer -->
-  <footer class="py-5 bg-light">
+ <!--  <footer class="py-5 bg-light">
     <div class="container">
       <p class="m-0 text-center text-black">Copyright &copy; TerraMA² 2017</p>
     </div>
-  </footer>
+  </footer> -->
+
+<footer class="mainfooter" role="contentinfo">
+  <div class="footer-top p-y-2">
+    <div class="container-fluid">
+
+    </div>
+  </div>
+  <div class="footer-middle">
+  <div class="container">
+    <div class="row">
+     
+      <div class="col-6 col-md-4">
+        <!--Column1-->
+        <div class="footer-pad">
+          <h4>Sobre</h4>
+          <ul class="list-unstyled">
+            <li><a href="#"></a></li>
+            <li><a href="about.html">TerraMA²</a></li>
+            <li><a href="team.html">Equipe</a></li>
+            <li><a href="architecture.html">Arquitetura</a></li>
+            <li><a href="contact.html">Contato</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-6 col-md-4">
+        <!--Column1-->
+        <div class="footer-pad">
+          <h4>Projetos</h4>
+          <ul class="list-unstyled">
+            <li><a href="#"></a></li>
+            <li><a href="projects.html">Projetos</a></li>
+            <li><a href="#" title="Em Breve!">Estudos de Caso</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-pad">
+          <h4></h4>
+          <ul class="list-unstyled">
+            <li><a href="#"></a></li>
+            <li><a href="download.html">Download</a></li>
+            <li><a href="documentation.html">Documentação</a></li>
+            <li><a href="#" title="Em Breve!">Cursos</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-6 col-md-4">
+        <!--Column1-->
+        <div class="footer-pad">
+          <h4>Endereço</h4>
+          <ul class="list-unstyled">
+            <a href="https://www.google.com.br/maps/uv?hl=pt-BR&pb=!1s0x94cc4b06accadc73:0xddb542b96e931e54!2m19!2m2!1i80!2i80!3m1!2i20!16m13!1b1!2m2!1m1!1e1!2m2!1m1!1e3!2m2!1m1!1e5!2m2!1m1!1e4!3m1!7e115!4s/maps/place/inpe/@-23.2065747,-45.8610523,3a,75y,197.13h,90t/data%3D*213m4*211e1*213m2*211shWsrf-huRyRvhP-PrbX58A*212e0*214m2*213m1*211s0x94cc4b06accadc73:0xddb542b96e931e54!5sinpe+-+Pesquisa+Google&imagekey=!1e2!2shWsrf-huRyRvhP-PrbX58A&sa=X&ved=0ahUKEwjhrOqTtZ_UAhWDI5AKHXbFBVMQpx8IiQEwCg" target="_blank">Avenida dos Astronautas, 1.758 <br> 
+              Jd. Granja CEP 12227 010<br>
+              São José dos Campos - SP</a> 
+          </ul>
+        </div>
+
+      </div>
+    </div> 
+  </div>
+  </div>
+  <div class="footer-bottom">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <!--Footer Bottom-->
+          <h6>&copy; Copyright 2017 TerraMA².  All rights reserved.</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
   <!-- /.Footer -->
 
   <!-- Gov -->
