--- a/architecture.html
+++ b/architecture.html
@@ -118,7 +118,7 @@
     </nav>
   <!-- ./Navigation -->
 
-  <!-- Page Content -->
+  <!-- Container -->
     <div class="container">
 
       <!-- Page Heading/Breadcrumbs -->
@@ -135,9 +135,6 @@
 
       <!-- Intro Content -->
       <div class="row">
-        <!-- <div class="col-lg-6">
-          <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
-        </div> -->
         <div class="col-lg-12"> 
           <!-- <img class="img-fluid rounded" src="images/modelo_terrama2_v4_portugues.png"> -->
 
@@ -146,7 +143,7 @@
                 onclick="document.getElementById('modal01').style.display='block'">
 
             <div id="modal01" class="w3-modal" onclick="this.style.display='none'">
-              <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
+              <span class="w3-button w3-hover-red w3-medium w3-display-bottomright">&times;</span>
               <div class="w3-modal-content w3-animate-zoom">
                 <img src="images/modelo_terrama2_v4_portugues.png" alt="modelo terraMa²" style="width:100%">
               </div>
@@ -173,12 +170,10 @@
           <p>A Figura acima mostra ainda exemplo de alguns dados disponíveis em uma base de dados de um projeto. Note que há dados dinâmicos que são adquiridos pelo serviço de coleta, dados dinâmicos que são gerados pela plataforma como resultado de análises e dados dinâmicos disponíveis por outras tecnologias como radares, satélites ou outros bancos de dados que estão localmente na mesma rede de computadores onde está a plataforma TerraMA2. Parte dos dados dinâmicos coletados, como dados de PCD's e ocorrências, devem ser armazenados em um banco espacial PostgreSQL+PostGIS.</p>
 
         </div>
-
       </div>
       <!-- /.row -->
-
     </div>
-    <!-- /.container -->
+    <!-- /.Container -->
 
     <!-- Footer -->
     <footer class="py-5 bg-light">
@@ -188,9 +183,9 @@
     </footer>
     <!-- ./Footer -->
 
-    <!-- Barra do Gov -->
+    <!-- Gov -->
     <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-    <!-- ./Barra do Gov -->
+    <!-- ./Gov -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
