--- a/documentation.html
+++ b/documentation.html
@@ -115,7 +115,7 @@
     </nav>
     <!-- ./Navigation -->
 
-    <!-- Page Content -->
+    <!-- Container -->
     <div class="container">
 
       <!-- Page Heading/Breadcrumbs -->
@@ -141,7 +141,7 @@
 
       <!-- <hr> -->
 
-      <table class="table table-hover table-inverse"> <!-- table-inverse -->
+      <table class="table table-hover"> <!-- table-inverse -->
         <thead>
           <tr>
             <!-- <th>#</th> -->
@@ -214,7 +214,7 @@
         </tbody>
       </table><br>
 
-     <!-- collapse -->
+     <!-- Collapse -->
       <div class="mb-4" id="accordion" role="tablist" aria-multiselectable="true">
 
         <div class="card">
@@ -248,10 +248,10 @@
           </div>
         </div>
       </div>
-      <!-- ./ collapse -->
+      <!-- ./ Collapse -->
 
     </div>
-    <!-- /.container -->
+    <!-- /.Container -->
 
     <!-- Footer -->
     <footer class="py-5 bg-light">
@@ -261,9 +261,9 @@
     </footer>
     <!-- ./Footer -->
 
-    <!-- Barra do Gov -->
+    <!-- Gov -->
     <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-    <!-- ./Barra do Gov -->
+    <!-- ./Gov -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
