--- a/new-two.html
+++ b/new-two.html
@@ -86,7 +86,7 @@
 
 <!-- /.Navigation -->
 
-    <!-- Page Content -->
+    <!-- Container -->
     <div class="container">
 
       <!-- Page Heading/Breadcrumbs -->
@@ -182,7 +182,7 @@
       </ul>
 
     </div>
-    <!-- /.container -->
+    <!-- /.Container -->
 
     <!-- Footer -->
     <footer class="py-5 bg-light">
@@ -191,9 +191,9 @@
       </div>
     </footer>
 
-    <!-- Barra do Gov -->
+    <!-- Gov -->
     <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-    <!-- ./Barra do Gov -->
+    <!-- ./Gov -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
