--- a/projects.html
+++ b/projects.html
@@ -20,8 +20,7 @@
   <link href="css/modern-business.css" rel="stylesheet">
 
 </head>
-
-  <body>
+<body>
 
   <!-- Gov -->
   <div id="barra-brasil" style="background:#7F7F7F; height: 30px; padding:0 0 0 10px;"> 
@@ -121,7 +120,7 @@
 
 <!-- /.Navigation -->
 
-    <!-- Page Content -->
+  <!-- Container -->
     <div class="container">
 
       <!-- Page Heading/Breadcrumbs -->
@@ -253,7 +252,7 @@
       </ul>
   
     </div>
-    <!-- /.container -->
+    <!-- /.Container -->
 
   
     <!-- Footer -->
@@ -261,12 +260,11 @@
       <div class="container">
         <p class="m-0 text-center text-black" >Copyright &copy; TerraMA² 2017</p>
       </div>
-      <!-- /.container -->
     </footer>
 
-    <!-- Barra do Gov -->
+    <!-- Gov -->
     <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-    <!-- ./Barra do Gov -->
+    <!-- ./Gov -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
