--- a/contact.html
+++ b/contact.html
@@ -119,50 +119,50 @@
               E-mail: <a href="mailto:terrama2@dpi.inpe.br">terrama2@dpi.inpe.br</a></p>
 
             </div>
-          </div>
+        </div>
           <!-- /.row -->
 
       <!-- Contact Form -->
       <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-      <!-- <div class="row">
-        <div class="col-lg-8 mb-4">
-          <h3>Send us a Message</h3>
+      <div class="row">
+        <div class="col-lg-12">
+          
           <form name="sentMessage" id="contactForm" novalidate>
             <div class="control-group form-group">
               <div class="controls">
-                <label>Full Name:</label>
+                <label>Nome completo:</label>
                 <input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
                 <p class="help-block"></p>
               </div>
             </div>
-            <div class="control-group form-group">
+            <!-- <div class="control-group form-group">
               <div class="controls">
-                <label>Phone Number:</label>
+                <label>Telefone:</label>
                 <input type="tel" class="form-control" id="phone" required data-validation-required-message="Please enter your phone number.">
               </div>
-            </div>
+            </div> -->
             <div class="control-group form-group">
               <div class="controls">
-                <label>Email Address:</label>
+                <label>E-mail:</label>
                 <input type="email" class="form-control" id="email" required data-validation-required-message="Please enter your email address.">
               </div>
             </div>
             <div class="control-group form-group">
               <div class="controls">
-                <label>Message:</label>
+                <label>Mensagem:</label>
                 <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
               </div>
             </div>
             <div id="success"></div>
             <!-- For success/fail messages -->
-            <!--<button type="submit" class="btn btn-primary">Send Message</button>
+            <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
         </div>
 
-      </div> -->
+      </div>
       <!-- /.row -->
 
-    </div>
+    </div><br><br>
     <!-- /.Container -->
 
     <!-- Footer -->
@@ -184,8 +184,8 @@
 
     <!-- Contact form JavaScript -->
     <!-- Do not edit these files! In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-    <!-- <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script> -->
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script> 
 
   </body>
 </html>
