--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
             <div class="col-md-6">
 
-              <h3 class="my-3">TerraMA² versão 4.0 - ALPHA 1 <span class="badge badge-primary">New</span></h3>
+              <h3 class="my-3">TerraMA² versão 4.0 - ALPHA 1 <a href="new-one.html"><span class="badge badge-primary">New</span></a></h3>
               <p>A plataforma TerraMA² necessita de inovações que atenda as aplicações diversas. Nesse sentido, estamos passando por uma reestruturação grande na base de nosso produto.</p>
 
               <a class="btn btn-outline-warning" href="new-one.html">Saiba mais 
