--- a/new-one.html
+++ b/new-one.html
@@ -103,6 +103,7 @@
       </ol>
 
       <h4>TerraMA² versão 4.0 - ALPHA 1</h4>
+      <p>disponível (25/08/2017)</p>
 
       <p>A plataforma TerraMA² necessita de inovações que atenda as aplicações diversas. Nesse sentido, estamos passando por uma reestruturação grande na base de nosso produto. Isto só tem sido possivel devido o projeto “BRAZIL CERRADO CLIMATE CHANGE MITIGATION PLATFORM OF MONITORING AND WARNING OF FOREST FIRES IN THE BRAZILIAN CERRADO PROJECT”, financiado pelo Banco Mundial (Banco Defra) obtido jundo ao Ministério do Meio Ambiente, que tem como um dos objetivos modernizar o projeto de Queimadas do INPE, fazendo uso da plataforma TerraMA².</p>
 
