--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
 
       <!-- Contact Form -->
       <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-      <div class="row">
+     <!--  <div class="row">
         <div class="col-lg-12">
           
           <form name="sentMessage" id="contactForm" novalidate>
@@ -135,12 +135,12 @@
                 <p class="help-block"></p>
               </div>
             </div>
-            <!-- <div class="control-group form-group">
+            <div class="control-group form-group">
               <div class="controls">
                 <label>Telefone:</label>
                 <input type="tel" class="form-control" id="phone" required data-validation-required-message="Please enter your phone number.">
               </div>
-            </div> -->
+            </div> 
             <div class="control-group form-group">
               <div class="controls">
                 <label>E-mail:</label>
@@ -153,13 +153,13 @@
                 <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
               </div>
             </div>
-            <div id="success"></div>
+            <div id="success"></div> -->
             <!-- For success/fail messages -->
-            <button type="submit" class="btn btn-primary">Enviar</button>
+           <!--  <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
         </div>
 
-      </div>
+      </div> -->
       <!-- /.row -->
 
     </div><br><br>
