--- a/download.html
+++ b/download.html
@@ -76,40 +76,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#" title="Em Breve!">Cursos</a>
             </li>
-            <!-- <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Portfolio
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-                <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-                <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-                <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-                <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
-              </div>
-            </li> -->
-            <!-- <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Blog
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-                <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
-                <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
-                <a class="dropdown-item" href="blog-post.html">Blog Post</a>
-              </div>
-            </li> -->
-            <!-- <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Other Pages
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-                <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-                <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-                <a class="dropdown-item" href="faq.html">FAQ</a>
-                <a class="dropdown-item" href="404.html">404</a>
-                <a class="dropdown-item" href="pricing.html">Pricing Table</a>
-              </div>
-            </li> -->
           </ul>
         </div>
       </div>
@@ -211,7 +177,7 @@
         <li>Servidor de Banco de Dados (PostgreSQL 9.5 + PostGIS 2.2)</li>
         <li>Java 8</li>
         <li>Apache Java Tomcat 8</li>
-        <li>Servidor de Mapas <a href="http://geoserver.org/release/maintain/" target="_blank"><b>Geoserver 2.10.3 utilize “Web Archive”</b></a></li>
+        <li>Servidor de Mapas <a href="http://geoserver.org/release/maintain/" target="_blank"><b>Geoserver 2.10.3</b></a> utilize “Web Archive”</li>
         <li>nodejs 4.x</li>
       </ul>
     </div>
@@ -234,7 +200,7 @@
       
       <ul>
         <li>
-          <a href="https://github.com/TerraMA2" target="_blank"><b>Código disponível em Github</b></a>
+          Código disponível em <a href="https://github.com/TerraMA2" target="_blank"><b>Github</b></a>
         </li>
       </ul><br>
     </div>
