testing and fixing navbar

--- a/documentation.html
+++ b/documentation.html
@@ -40,9 +40,9 @@
       <!-- Logo -->
       <a href="index.html" title="Home"><img src="images/logo-terraMa2.png" width="60" height="50" alt="logo terraMa²"></a>
 
-      <!--   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button> -->
+        </button>
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
