--- a/architecture.html
+++ b/architecture.html
@@ -12,7 +12,7 @@
     <link href="images/logo-terraMa2.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 
     <!-- Animation Image-->
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,9 +43,9 @@
         <!-- Logo -->
         <a href="index.html" title="Home"><img src="images/logo-terraMa2.png" width="60" height="50" alt="logo terraMa²"></a>
         
-        <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button> -->
+        </button>
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
@@ -136,10 +136,10 @@
       <!-- Intro Content -->
       <div class="row">
         <div class="col-lg-12"> 
-          <!-- <img class="img-fluid rounded" src="images/modelo_terrama2_v4_portugues.png"> -->
+          <img class="img-fluid rounded" src="images/modelo_terrama2_v4_portugues.png">
 
           <!-- animation -->
-            <img src="images/modelo_terrama2_v4_portugues.png" alt="modelo terraMa²" style="width:75%;cursor:zoom-in"
+          <!-- <img src="images/modelo_terrama2_v4_portugues.png" alt="modelo terraMa²" style="width:75%;cursor:zoom-in"
                 onclick="document.getElementById('modal01').style.display='block'">
 
             <div id="modal01" class="w3-modal" onclick="this.style.display='none'">
@@ -147,7 +147,7 @@
               <div class="w3-modal-content w3-animate-zoom">
                 <img src="images/modelo_terrama2_v4_portugues.png" alt="modelo terraMa²" style="width:100%">
               </div>
-            </div>
+            </div> -->
           <!-- ./animation -->
         </div>
 
