--- a/test.html
+++ b/test.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 
 <head>
-
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <meta name="description" content=""/>
@@ -18,10 +17,10 @@
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet"/>
-
+    
 </head>
 
-<body>
+  <body>
   <!-- Gov -->
   <div id="barra-brasil" style="background:#7F7F7F; height: 30px; padding:0 0 0 10px;"> 
     <ul id="menu-barra-temp" style="list-style:none;">
@@ -31,56 +30,45 @@
           <a style="font-family:sans,sans-serif; text-decoration:none; color:white;" href="http://epwg.governoeletronico.gov.br/barra/atualize.html">Atualize sua Barra de Governo</a></li>
         </ul>
       </div>
-      <!-- ./Gov -->
+  <!-- ./Gov -->
 
-      <!-- Navigation -->
-      <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-light">  
-        <div class="container">
-          <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
+   <!-- .navbar -->
+<nav class="navbar navbar-full sticky-top navbar-dark bg-secondary">
+  <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#mainNavbarCollapse">
+  &#9776;
+  </button>
+  <a class="navbar-brand" href="#">
+  <!-- <img class="img-rounded" src="https://placehold.it/32/ffffff?text=B"> -->
+  <img src="images/logo-terraMa2.png" width="50" height="40" alt="logo terraMa2">
+  </a>
+  <div class="collapse navbar-toggleable-md" id="mainNavbarCollapse">
+    <ul class="nav navbar-nav pull-lg-right">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Blog</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link" id="navbarDropdown1" data-target="#" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<!-- /.navbar -->
 
-          <!-- Logo -->
-          <a href="index.html" title="Home"><img src="images/logo-terraMa2.png" width="60" height="50" alt="logo terraMa2"></a>
-
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownAbout" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Sobre
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
-                <a class="dropdown-item" href="about.html">TerraMA2</a>
-                <a class="dropdown-item" href="team.html">Equipe</a>
-                <a class="dropdown-item" href="architecture.html">Arquitetura</a>
-                <a class="dropdown-item" href="contact.html">Contato</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Projetos
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
-                <a class="dropdown-item" href="projects.html">Projetos</a>
-                <a class="dropdown-item" href="portfolio-1-col.html">Estudos de Casos</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="download.html">Download</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="documentation.html">Documentação</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" title="Em Breve!">Cursos</a>
-            </li>            
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- /.Navigation -->
+  
 
     <!-- Carousel -->
     <header>
@@ -299,14 +287,14 @@
 </footer>
   <!-- /.Footer -->
 
-  <!-- Gov -->
-  <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-  <!-- ./Gov -->
+    <!-- Gov -->
+    <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
+    <!-- ./Gov -->
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/popper/popper.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-  
-</body>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/popper/popper.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+  </body>
 </html>
