--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       <div class="row">
         <div class="col-xs-12">
           <!--Footer Bottom-->
-          <h6>&copy; Copyright 2017 TerraMA².  All rights reserved.</h6>
+          <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
         </div>
       </div>
     </div>
