--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>TerraMA² | Equipe</title>
+    <title>TerraMA² · Equipe</title>
     <link href="images/logo-terraMa2.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 
     <!-- Bootstrap core CSS -->
@@ -455,6 +455,75 @@
         <p class="m-0 text-center text-black">Copyright &copy; TerraMA² 2017</p>
       </div>
     </footer> -->
+
+    <footer class="mainfooter">
+  <div class="footer-top p-y-2">
+    <div class="container-fluid">
+
+    </div>
+  </div>
+  <div class="footer-middle">
+  <div class="container">
+    <div class="row">
+     
+      <div class="col-6 col-md-4">
+        <!--Column1-->
+        <div class="footer-pad">
+          <h4>Sobre</h4>
+          <ul class="list-unstyled">
+            <li><a href="#"></a></li>
+            <li><a href="about.html">TerraMA²</a></li>
+            <li><a href="team.html">Equipe</a></li>
+            <li><a href="architecture.html">Arquitetura</a></li>
+            <li><a href="contact.html">Contato</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-6 col-md-4">
+        <!--Column1-->
+        <div class="footer-pad">
+          <h4>Projetos</h4>
+          <ul class="list-unstyled">
+            <li><a href="#"></a></li>
+            <li><a href="projects.html">Projetos</a></li>
+            <li><a href="#" title="Em Breve!">Estudos de Caso</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-pad">
+          <ul class="list-unstyled">
+            <li><a href="#"></a></li>
+            <li><a href="download.html">Download</a></li>
+            <li><a href="documentation.html">Documentação</a></li>
+            <li><a href="#" title="Em Breve!">Cursos</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-6 col-md-4">
+        <!--Column1-->
+        <div class="footer-pad">
+          <h4>Endereço</h4>
+
+            <p>Avenida dos Astronautas, 1.758 <br> 
+            Jd. Granja CEP 12227 010<br>
+            São José dos Campos - SP</p> 
+        </div>
+      </div>
+    </div> 
+  </div>
+  </div>
+  <div class="footer-bottom">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <!--Footer Bottom-->
+          <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+  <!-- /.Footer -->
 
     <!-- Barra do Gov -->
     <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
