--- a/download.html
+++ b/download.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta property="creator.productor" content="http://estruturaorganizacional.dados.gov.br/id/unidade-organizacional/49020"/>
 
   <title>TerraMA² · Download</title>
   <link href="images/logo-terraMa2.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
@@ -284,13 +285,17 @@
               <div class="footer-pad">
                 <h4>Endereço</h4>
 
-                <p>Avenida dos Astronautas, 1.758 <br> 
-                  Jd. Granja CEP 12227 010<br>
-                São José dos Campos - SP</p> 
+                <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
+              </div>
+              <div class="footer-pad">
+                <div class="mx-auto" style="width: 200px;">
+                  <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt=""></a>
+                </div>
               </div>
             </div>
           </div> 
         </div>
+
       </div>
       <div class="footer-bottom">
         <div class="container">
@@ -298,6 +303,7 @@
             <div class="col-xs-12">
               <!--Footer Bottom-->
               <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
+
             </div>
           </div>
         </div>
