--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <meta name="description" content=""/>
   <meta name="author" content=""/>
-  <meta property="creator.productor" content="http://estruturaorganizacional.dados.gov.br/id/unidade-organizacional/NUMERO"/> 
+  <meta property="creator.productor" content="http://estruturaorganizacional.dados.gov.br/id/unidade-organizacional/49020"/> 
 
   <title>TerraMA²</title>
   <link href="images/logo-terraMa2.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
@@ -19,6 +19,8 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet"/>
 
+  <!-- back to top -->
+  <!-- <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -55,6 +57,7 @@
                   <a class="dropdown-item" href="about.html">TerraMA2</a>
                   <a class="dropdown-item" href="team.html">Equipe</a>
                   <a class="dropdown-item" href="architecture.html">Arquitetura</a>
+                  <!-- <a class="dropdown-item" href="#">Notícias</a> -->
                   <a class="dropdown-item" href="contact.html">Contato</a>
                 </div>
               </li>
@@ -203,7 +206,12 @@
       <div class="row">
 
         <div class="col-md-6">
-          <img class="img-fluid" src="images/selection_001.png" alt="">
+          <!-- <img class="img-fluid" src="images/selection_001.png" alt=""> -->
+
+          <figure class="figure">
+            <img src="images/selection_001.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+            <figcaption class="figure-caption">Aplicação Web TerraMA²</figcaption>
+          </figure>
         </div>
 
         <div class="col-md-6">
@@ -254,6 +262,10 @@
       </section><br>
       <!-- /.Section two -->
 
+      <!-- Scroll to Top -->
+      <!-- <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a> -->
+      <!-- /.Scroll to Top -->
+
     </div>
     <!-- /.Container -->
 
@@ -273,7 +285,7 @@
     <div class="footer-middle">
       <div class="container">
         <div class="row">
-         
+
           <div class="col-6 col-md-4">
             <!--Column1-->
             <div class="footer-pad">
@@ -312,13 +324,17 @@
             <div class="footer-pad">
               <h4>Endereço</h4>
 
-              <p>Avenida dos Astronautas, 1.758 <br> 
-                Jd. Granja CEP 12227 010<br>
-              São José dos Campos - SP</p> 
+              <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
+            </div>
+            <div class="footer-pad">
+              <div class="mx-auto" style="width: 200px;">
+                <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt=""></a>
+              </div>
             </div>
           </div>
         </div> 
       </div>
+
     </div>
     <div class="footer-bottom">
       <div class="container">
@@ -341,6 +357,7 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/popper/popper.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+  <script src="js/back-top.js"></script>
   
 </body>
 </html>
