--- a/download.html
+++ b/download.html
@@ -109,7 +109,7 @@
             <a href="#quatro"><b>4</b></a> - Código fonte para compilar <br>
           </ul>
 
-        </div><br>
+        </div>
 
     <!-- <div class="alert alert-success" role="alert">
       
@@ -125,9 +125,6 @@
     </div>
     
     <p><a href="#historic"><b>Histórico de Versões</b></a></p>
-
-    <hr>
-
     <!-- Windows -->
     <div class="jumbotron border border-warning">
       <h5 id="um">1 - Instalação Windows</h5>
