--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   Sobre
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
-                  <a class="dropdown-item" href="about.html">TerraMA2</a>
+                  <a class="dropdown-item" href="about.html">TerraMA²</a>
                   <a class="dropdown-item" href="team.html">Equipe</a>
                   <a class="dropdown-item" href="architecture.html">Arquitetura</a>
                   <!-- <a class="dropdown-item" href="#">Notícias</a> -->
