--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
   <title>TerraMA²</title>
   <link href="img/terrama2_logo_100dpi.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
-  <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-
+  
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 
@@ -54,7 +53,6 @@
                   <a class="dropdown-item" href="about.html">TerraMA²</a>
                   <a class="dropdown-item" href="team.html">Equipe</a>
                   <a class="dropdown-item" href="architecture.html">Arquitetura</a>
-                  <!-- <a class="dropdown-item" href="#">Notícias</a> -->
                   <a class="dropdown-item" href="contact.html">Contato</a>
                 </div>
               </li>
@@ -74,7 +72,6 @@
                 <a class="nav-link" href="documentation.html">Documentação</a>
               </li>
               <li class="nav-item">
-                <!-- <a class="nav-link" href="#" title="Em Breve!">Cursos</a> -->
                 <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Em Breve!">Cursos</a>
               </li>
               <li>
@@ -101,7 +98,7 @@
 
           <div class="carousel-inner" role="listbox">
 
-            <div class="carousel-item active"> <!-- url('http://placehold.it/1900x1080') -->
+            <div class="carousel-item active">
               <img class="d-block w-100" src="images/wildfire.png" alt="queimadas">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Queimadas</h1> -->
@@ -109,7 +106,7 @@
               </div>
             </div>
 
-            <div class="carousel-item"> <!-- style="background-image: url('http://placehold.it/1900x1080')" -->
+            <div class="carousel-item">
               <img class="d-block w-100" src="images/storm.png" alt="raios">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Raios</h1> -->
@@ -117,7 +114,7 @@
               </div>
             </div>
 
-            <div class="carousel-item"> <!--style="background-image: url('http://placehold.it/1900x1080')"> -->
+            <div class="carousel-item">
               <img class="d-block w-100" src="images/inundation.png" alt="inundações">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Inundações</h1> -->
@@ -125,7 +122,7 @@
               </div>
             </div>
 
-            <div class="carousel-item"><!--style="background-image: url('http://placehold.it/1900x1080')">-->
+            <div class="carousel-item">
               <img class="d-block w-100" src="images/terrama2_v4.png" alt="projeto terraMa²">
               <div class="carousel-caption d-none d-md-block">
                <!--  <h1>Third Slide</h1> -->
@@ -159,7 +156,6 @@
         <a class="btn btn-outline-warning" href="about.html">Saiba mais 
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
-
       </div>
       <!-- /.Container -->
     </div>
@@ -176,8 +172,6 @@
         <div class="row">
 
           <div class="col-md-6">
-            <!-- <img class="img-fluid" src="images/selection_001.png" alt=""> -->
-
             <figure class="figure">
               <img src="images/selection_001.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
               <figcaption class="figure-caption">Aplicação Web TerraMA²</figcaption>
@@ -189,9 +183,7 @@
             <h3 class="my-3">TerraMA² versão 4.0 - ALPHA 1 <a href="new-one.html"><span class="badge badge-primary">New</span></a></h3>
             <p>A plataforma TerraMA² necessita de inovações que atenda as aplicações diversas. Nesse sentido, estamos passando por uma reestruturação grande na base de nosso produto.</p>
 
-            <a class="btn btn-outline-warning" href="new-one.html">Saiba mais 
-              <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
+            <a class="btn btn-outline-warning" href="new-one.html">Saiba mais</a>
           </div>
 
         </div><br>
@@ -205,10 +197,6 @@
       <section>
         <!-- Item Row -->
         <div class="row">
-
-          <!-- <div class="col-md-6">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
-          </div> -->
 
           <div class="col-md-12">
             <h3 class="my-3">Novidades e Melhorias na versão 3</h3>
