--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,6 @@
                   <a class="dropdown-item" href="about.html">TerraMA²</a>
                   <a class="dropdown-item" href="team.html">Equipe</a>
                   <a class="dropdown-item" href="architecture.html">Arquitetura</a>
-                  <!-- <a class="dropdown-item" href="#">Notícias</a> -->
                   <a class="dropdown-item" href="contact.html">Contato</a>
                 </div>
               </li>
@@ -73,7 +72,6 @@
                 <a class="nav-link" href="documentation.html">Documentação</a>
               </li>
               <li class="nav-item">
-                <!-- <a class="nav-link" href="#" title="Em Breve!">Cursos</a> -->
                 <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Em Breve!">Cursos</a>
               </li>
               <li>
@@ -110,11 +108,10 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3666.992668957822!2d-45.8633627850288!3d-23.206937784860017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cc4b06accadc73%3A0xddb542b96e931e54!2sINPE+-+Instituto+Nacional+de+Pesquisas+Espaciais!5e0!3m2!1spt-BR!2sbr!4v1505241421568" width="1100" height="300" style="border:0" allowfullscreen></iframe>
 
           </div>
-          <!-- Contact Details Column -->
+          <!-- Contact -->
           <div class="col-lg-12"><br><br>
-            <!--<h3>Contact Details</h3>-->
-            <h4>Utilize uma das opções para contato com a equipe do INPE e com outros usuários:</h4><br>
 
+            <h4>Utilize uma das opções para contato com a equipe do INPE e com outros usuários:</h4><br>
             <h4>Lista de Discussão</h4><br>
 
             <p>Utilize nossa lista de discussão:<br>  
@@ -131,7 +128,7 @@
 
             <!-- Contact Form -->
             <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-     <!--  <div class="row">
+        <!--  <div class="row">
         <div class="col-lg-12">
           
           <form name="sentMessage" id="contactForm" novalidate>
@@ -172,13 +169,7 @@
     </div><br><br>
     <!-- /.Container -->
 
-    <!-- Footer -->
-    <!-- <footer class="py-5 bg-light">
-      <div class="container">
-        <p class="m-0 text-center text-black">Copyright &copy; TerraMA² 2017</p>
-      </div>
-    </footer> -->
-    
+    <!-- Footer -->    
     <footer class="mainfooter">
       <div class="footer-top p-y-2">
         <div class="container-fluid">
@@ -265,14 +256,14 @@
     <!-- Contact form JavaScript -->
     <!-- Do not edit these files! In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
     <!-- <script src="js/jqBootstrapValidation.js"></script>
-      <script src="js/contact_me.js"></script>  -->
+     <script src="js/contact_me.js"></script>  -->
 
-    <!-- Script tooltip -->
-    <script>
+     <!-- Script tooltip -->
+     <script>
       $(document).ready(function(){
         $('[data-toggle="tooltip"]').tooltip();   
       });
     </script>
 
-    </body>
+  </body>
   </html>
