--- a/documentation.html
+++ b/documentation.html
@@ -53,7 +53,6 @@
                   <a class="dropdown-item" href="about.html">TerraMA²</a>
                   <a class="dropdown-item" href="team.html">Equipe</a>
                   <a class="dropdown-item" href="architecture.html">Arquitetura</a>
-                  <!-- <a class="dropdown-item" href="#">Notícias</a> -->
                   <a class="dropdown-item" href="contact.html">Contato</a>
                 </div>
               </li>
@@ -73,7 +72,6 @@
                 <a class="nav-link" href="documentation.html">Documentação</a>
               </li>
               <li class="nav-item">
-                <!-- <a class="nav-link" href="#" title="Em Breve!">Cursos</a> -->
                 <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Em Breve!">Cursos</a>
               </li>
               <li>
@@ -112,12 +110,10 @@
 
        </div>
 
-       <!-- <hr> -->
 
-       <table class="table table-hover"> <!-- table-inverse -->
+       <table class="table table-hover">
         <thead>
           <tr>
-            <!-- <th>#</th> -->
             <th>Publicações</th>
             <th>Em Português</th>
             <th>Em Inglês</th>
@@ -125,64 +121,51 @@
         </thead>
         <tbody>
           <tr>
-            <!-- <th scope="row">1</th> -->
             <td>LOPES, E. S. S.; NAMIKAWA, L. M.; REIS, J. B. C. Risco de escorregamento: monitoramento e alerta de áreas urbanas nos municípios no entorno de Angra dos Reis - Rio de Janeiro. In: 13° Congresso Brasileiro de Geologia de Engenharia e Ambiental, 2011, São Paulo. Anais. 2011.</td>
             <td><a href="docs/publications/sibraden_2011.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
             <td></td>
-            <!-- <td>@mdo</td> -->
           </tr>
           <tr>
-            <!-- <th scope="row">2</th> -->
             <td>REIS, J. B. C.; SANTOS, T. B.; LOPES, E. S. S. Monitoramento em tempo real de eventos extremos na Região Metropolitana de São Paulo – uma aplicação com o SISMADEN. In: 14° SIMPÓSIO BRASILEIRO DE GEOGRAFIA FÍSICA APLICADA, 2011, Dourados, MS. Anais. 2011.</td>
             <td><a href="docs/publications/enchentes_sismaden.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
             <td></td>
-            <!-- <td>@fat</td> -->
           </tr>
           <tr>
-            <!-- <th scope="row">3</th> -->
             <td>REIS, J. B. C.; CORDEIRO, T. L.; LOPES, E. S. S. Utilização do Sistema de Monitoramento e Alerta de Desastres Naturais aplicado a situações de escorregamento - caso de Angra dos Reis. In: 14° SIMPÓSIO BRASILEIRO DE GEOGRAFIA FÍSICA APLICADA, 2011, Dourados, MS. Anais. 2011.</td>
             <td><a href="docs/publications/escorregamentos_sismaden.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
             <td></td>
           </tr>
           <tr>
-            <!-- <th scope="row">3</th> -->
             <td>RODRIGUES, S. C. Mapeamento de suscetibilidade a escorregamentos de Nova Friburgo-RJ por meio de inferência fuzzy e elaboração de cenários de alerta com uso do TerraMA2. Dissertação de Mestrado em Sensoriamento Remoto - INPE, 2013.</td>
             <td><a href="docs/publications/carina_rodrigues_inpe_mestrado2013_novafriburgo.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
             <td></td>
           </tr>
           <tr>
-            <!-- <th scope="row">3</th> -->
             <td>ARRUDA Jr.E.R.; LOPES, E.S.S. Análise morfométrica em sub-bacias hidrográficas para monitoramento do risco potencial a corridas de massa (debris flows) na região serrana do Rio de Janeiro. Congresso Brasileiro de Geologia de Engenharia e Ambiental (14) - SIBRADEN. Rio de Janeiro, 2013.</td>
             <td><a href="docs/publications/cbgeg_sibraden_elias_eymar.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a><br>
               <a href="docs/publications/cbgeg_sibraden_elias_eymar_apresentacao.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
               <td></td>
             </tr>
             <tr>
-              <!-- <th scope="row">3</th> -->
               <td>BARBOSA, H.A.; SILVA, L.R.M.; SANTOS, A.M.; NETO, C.P.S. A STEP BEYOND VISUALIZATION: HOW TO INGEST METEOSAT SECOND GENERATION SATELLITE DATA AND PRODUCTS INTO McIDAS-V, ILWIS AND TerraMA2. Journal of Hyperspectral Remote Sensing. v.04, n.01, 01-15, 2014.</td>
               <td></td>
               <td><a href="docs/publications/meteosat_terrama2_humbertoleandro_jhrs_2014.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
             </tr>
             <tr>
-              <!-- <th scope="row">3</th> -->
               <td>REIS, J.B.C. Monitoramento e alerta de inundação no município de Itajubá (MG) através de modelos matemáticos. Dissertação de Mestrado em Ciências em Meio Ambiente e Recursos Hídricos – Itajubá - MG, 2014.</td>
               <td><a href="docs/publications/dissertacao_joao_unifei.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a><br>
                 <a href="docs/publications/dissertacao_joao_unifei_apresentacao.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
                 <td></td>
               </tr>
               <tr>
-                <!-- <th scope="row">2</th> -->
                 <td>Pimentel, A.S.; GALVÃO, A.S.; REIS, V.L. Plataforma de Monitoramento Ambiental TerraMA²: Elaboração do Banco de Estudo para Simulação de Alertas de Enchentes na Cidade de Rio Branco –Acre. In: 23 Seminário de Iniciação Científica – Rio Branco - AC, 2014.</td>
                 <td><a href="docs/publications/xxiii_seminario_ic_pibic_alanpimentel.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
                 <td></td>
-                <!-- <td>@fat</td> -->
               </tr>
               <tr>
-                <!-- <th scope="row">2</th> -->
                 <td>Pimentel, A.S.; REIS, V.L.; LOPES, E.S.S. Monitoramento e alerta de desastres naturais no Estado do Acre: Aplicação da plataforma TerraMA², PAP018515. In: 12 Simpósio de Recursos Hídricos do Nordeste – Natal - RN, 2014.</td>
                 <td><a href="docs/publications/xii_srhn_natal_2014_alan.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
                 <td></td>
-                <!-- <td>@fat</td> -->
               </tr>
             </tbody>
           </table><br>
@@ -227,101 +210,96 @@
         <!-- /.Container -->
 
         <!-- Footer -->
-   <!--  <footer class="py-5 bg-light">
-      <div class="container">
-        <p class="m-0 text-center text-black">Copyright &copy; TerraMA² 2017</p>
-      </div>
-    </footer> -->
 
-    <footer class="mainfooter">
-      <div class="footer-top p-y-2">
-        <div class="container-fluid">
-
-        </div>
-      </div>
-      <div class="footer-middle">
-        <div class="container">
-          <div class="row">
-
-            <div class="col-6 col-md-4">
-              <!--Column1-->
-              <div class="footer-pad">
-                <h4>Sobre</h4>
-                <ul class="list-unstyled">
-                  <li><a href="#"></a></li>
-                  <li><a href="about.html">TerraMA²</a></li>
-                  <li><a href="team.html">Equipe</a></li>
-                  <li><a href="architecture.html">Arquitetura</a></li>
-                  <li><a href="contact.html">Contato</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-6 col-md-4">
-              <!--Column1-->
-              <div class="footer-pad">
-                <h4>Projetos</h4>
-                <ul class="list-unstyled">
-                  <li><a href="#"></a></li>
-                  <li><a href="projects.html">Projetos</a></li>
-                  <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
-                </ul>
-              </div>
-
-              <div class="footer-pad">
-                <ul class="list-unstyled">
-                  <li><a href="#"></a></li>
-                  <li><a href="download.html">Download</a></li>
-                  <li><a href="documentation.html">Documentação</a></li>
-                  <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Cursos</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-6 col-md-4">
-              <!--Column1-->
-              <div class="footer-pad">
-                <h4>Endereço</h4>
-
-                <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
-              </div>
-              <div class="footer-pad">
-                <div class="mx-auto" style="width: 200px;">
-                  <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt=""></a>
-                </div>
-              </div>
-            </div>
-          </div> 
-        </div>
-
-      </div>
-      <div class="footer-bottom">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <!--Footer Bottom-->
-              <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
+        <footer class="mainfooter">
+          <div class="footer-top p-y-2">
+            <div class="container-fluid">
 
             </div>
           </div>
-        </div>
-      </div>
-    </footer>
-    <!-- /.Footer -->
+          <div class="footer-middle">
+            <div class="container">
+              <div class="row">
 
-    <!-- Gov -->
-    <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-    <!-- /.Gov -->
+                <div class="col-6 col-md-4">
+                  <!--Column1-->
+                  <div class="footer-pad">
+                    <h4>Sobre</h4>
+                    <ul class="list-unstyled">
+                      <li><a href="#"></a></li>
+                      <li><a href="about.html">TerraMA²</a></li>
+                      <li><a href="team.html">Equipe</a></li>
+                      <li><a href="architecture.html">Arquitetura</a></li>
+                      <li><a href="contact.html">Contato</a></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-6 col-md-4">
+                  <!--Column1-->
+                  <div class="footer-pad">
+                    <h4>Projetos</h4>
+                    <ul class="list-unstyled">
+                      <li><a href="#"></a></li>
+                      <li><a href="projects.html">Projetos</a></li>
+                      <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
+                    </ul>
+                  </div>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+                  <div class="footer-pad">
+                    <ul class="list-unstyled">
+                      <li><a href="#"></a></li>
+                      <li><a href="download.html">Download</a></li>
+                      <li><a href="documentation.html">Documentação</a></li>
+                      <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Cursos</a></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-6 col-md-4">
+                  <!--Column1-->
+                  <div class="footer-pad">
+                    <h4>Endereço</h4>
 
-    <!-- Script tooltip -->
-    <script>
-      $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();   
-      });
-    </script>
+                    <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
+                  </div>
+                  <div class="footer-pad">
+                    <div class="mx-auto" style="width: 200px;">
+                      <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt=""></a>
+                    </div>
+                  </div>
+                </div>
+              </div> 
+            </div>
 
-  </body>
-  </html>
+          </div>
+          <div class="footer-bottom">
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-12">
+                  <!--Footer Bottom-->
+                  <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </footer>
+        <!-- /.Footer -->
+
+        <!-- Gov -->
+        <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
+        <!-- /.Gov -->
+
+        <!-- Bootstrap core JavaScript -->
+        <script src="vendor/jquery/jquery.min.js"></script>
+        <script src="vendor/popper/popper.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+        <!-- Script tooltip -->
+        <script>
+          $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();   
+          });
+        </script>
+
+      </body>
+      </html>
