refactoring pages and correcting navbar page-team

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
               
               <p>A plataforma computacional TerraMA² foi planejada dentro da linha de produtos de base tecnológica inovadora, no domínio de softwares abertos, com extensivo uso de nossa biblioteca geográfica TerraLib, além de atender uma demanda crescente de aplicações de monitoramento, análise e alerta em áreas como qualidade do ar, qualidade da água, gasodutos, barragens de rejeito em área de mineração, incêndios florestais, movimentos de massa do tipo escorregamentos e corridas de lama, enchentes e estiagens.</p>
 
-              <p>Estas aplicações necessitam de plataformas que possam integrar serviços geográficos e modelagem, com base de acesso em tempo-real a dados geo-ambientais (meterológicos, climáticos, atmosféricos, hidrológicos, geotécnicos, socio-demográficos, etc.) disponíveis em qualquer servidor conectado a internet, e que podem ser lidos, processados e aplicados a diversos usos. Portanto, a plataforma TerraMA² é um sistema computacional, baseado em uma arquitetura de serviços, aberta, que provê a infra-estrutura tecnológica necessária ao desenvolvimento de sistemas operacionais para monitoramento de alertas de riscos ambientais.</p>
+              <p>Estas aplicações necessitam de plataformas que possam integrar serviços geográficos e modelagem, com base de acesso em tempo-real a dados geo-ambientais (meterológicos, climáticos, atmosféricos, hidrológicos, geotécnicos, socio-demográficos, etc.) disponíveis em qualquer servidor conectado a internet, e que podem ser lidos, processados e aplicados a diversos usos. Portanto, a plataforma TerraMA² é um sistema computacional, baseado em uma arquitetura de serviços, aberta, que provê a infraestrutura tecnológica necessária ao desenvolvimento de sistemas operacionais para monitoramento de alertas de riscos ambientais.</p>
 
             </div>
           </div>
@@ -136,10 +136,14 @@
           <div class="col-lg-12">
             <div class="jumbotron border border-warning">
 
-              <h3>Quem opera a plataforma?</h3>
+              <h3>Quem opera a plataforma?</h3><br>
 
-              <p>A TerraMA² provê serviços para busca de dados atuais através da internet e sua incorporação à base de dados do sistema de alerta; serviços para tratar/analisar em tempo real dados novos e verificar se uma situação de risco existe, através de uma comparação com mapas de risco ou de um modelo definido; serviços para executar/editar/criar novos modelos de risco e alerta; serviços para criação e notificação de alerta para os usuários do sistema em operação entre outros serviços básicos e avançados.</p>
-              <p>A operação do sistema de alerta requer o acesso a dados atuais de observação e previsão, além de mapas de risco das áreas observadas ou de modelos matemáticos que definam os riscos. Operadores do Sistema: Os operadores do sistema são organizações que monitoram a possibilidade de ocorrência do desastres. Clientes dos Alertas: Os clientes dos alertas do sistema são os agentes que tem a competência para executar as ações preventivas para a diminuição de perdas no caso da ocorrência do desastre.</p>
+              <p>A TerraMA² provê serviços para busca de dados atuais através da internet e sua incorporação à base de dados do sistema de alerta;</p> 
+              <p>Serviços para tratar/analisar em tempo real dados novos e verificar se uma situação de risco existe, através de uma comparação com mapas de risco ou de um modelo definido;</p>
+              Serviços para executar/editar/criar novos modelos de risco e alerta; serviços para criação e notificação de alerta para os usuários do sistema em operação entre outros serviços básicos e avançados.</p>
+              <p>A operação do sistema de alerta requer o acesso a dados atuais de observação e previsão, além de mapas de risco das áreas observadas ou de modelos matemáticos que definam os riscos.</p> 
+              <p><b>Operadores do Sistema:</b> Os operadores do sistema são organizações que monitoram a possibilidade de ocorrência do desastres.</p> 
+              <p><b>Clientes dos Alertas:</b> Os clientes dos alertas do sistema são os agentes que tem a competência para executar as ações preventivas para a diminuição de perdas no caso da ocorrência do desastre.</p>
             </div>
           </div>
 
