--- a/architecture.html
+++ b/architecture.html
@@ -123,7 +123,7 @@
               <li><p><b>Serviço de Alerta:</b> Responsável pelo envio de mensagens e relatórios contendo informações a respeito das alterações nos níveis de risco detectados pelo serviço de análise. Os usuários devem se cadastrar como observadores das análises para receberem os relatórios de alteração, enviados através de correio eletrônico.</p></li>
             </ul>
 
-            <p>A Figura acima mostra ainda exemplo de alguns dados disponíveis em uma base de dados de um projeto. Note que há dados dinâmicos que são adquiridos pelo serviço de coleta, dados dinâmicos que são gerados pela plataforma como resultado de análises e dados dinâmicos disponíveis por outras tecnologias como radares, satélites ou outros bancos de dados que estão localmente na mesma rede de computadores onde está a plataforma TerraMA2. Parte dos dados dinâmicos coletados, como dados de PCD's e ocorrências, devem ser armazenados em um banco espacial PostgreSQL+PostGIS.</p>
+            <p>A Figura acima mostra ainda exemplo de alguns dados disponíveis em uma base de dados de um projeto. Note que há dados dinâmicos que são adquiridos pelo serviço de coleta, dados dinâmicos que são gerados pela plataforma como resultado de análises e dados dinâmicos disponíveis por outras tecnologias como radares, satélites ou outros bancos de dados que estão localmente na mesma rede de computadores onde está a plataforma TerraMA². Parte dos dados dinâmicos coletados, como dados de PCD's e ocorrências, devem ser armazenados em um banco espacial PostgreSQL+PostGIS.</p>
 
           </div>
         </div>
