--- a/documentation.html
+++ b/documentation.html
@@ -103,13 +103,10 @@
 
         <h4>Documentos do Usuário</h4>
         <div class="bs-callout bs-callout-warning">
-
           <p><a href="docs/download/manual_instalacao_terrama2_rc1.pdf" target="_blank">Manual de Instalação do TerraMA²</a><br>
            <a href="docs/documentation/02_introducao_terrama2.pdf" target="_blank">Apresentação do Sistema</a>
          </p>
-
        </div>
-
 
        <table class="table table-hover">
         <thead>
@@ -121,49 +118,49 @@
         </thead>
         <tbody>
           <tr>
-            <td>LOPES, E. S. S.; NAMIKAWA, L. M.; REIS, J. B. C. Risco de escorregamento: monitoramento e alerta de áreas urbanas nos municípios no entorno de Angra dos Reis - Rio de Janeiro. In: 13° Congresso Brasileiro de Geologia de Engenharia e Ambiental, 2011, São Paulo. Anais. 2011.</td>
+            <td>LOPES, E. S. S.; NAMIKAWA, L. M.; REIS, J. B. C. <b>Risco de escorregamento: monitoramento e alerta de áreas urbanas nos municípios no entorno de Angra dos Reis - Rio de Janeiro.</b> In: 13° Congresso Brasileiro de Geologia de Engenharia e Ambiental, 2011, São Paulo. Anais. 2011.</td>
             <td><a href="docs/publications/sibraden_2011.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
             <td></td>
           </tr>
           <tr>
-            <td>REIS, J. B. C.; SANTOS, T. B.; LOPES, E. S. S. Monitoramento em tempo real de eventos extremos na Região Metropolitana de São Paulo – uma aplicação com o SISMADEN. In: 14° SIMPÓSIO BRASILEIRO DE GEOGRAFIA FÍSICA APLICADA, 2011, Dourados, MS. Anais. 2011.</td>
+            <td>REIS, J. B. C.; SANTOS, T. B.; LOPES, E. S. S. <b>Monitoramento em tempo real de eventos extremos na Região Metropolitana de São Paulo – uma aplicação com o SISMADEN.</b> In: 14° SIMPÓSIO BRASILEIRO DE GEOGRAFIA FÍSICA APLICADA, 2011, Dourados, MS. Anais. 2011.</td>
             <td><a href="docs/publications/enchentes_sismaden.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
             <td></td>
           </tr>
           <tr>
-            <td>REIS, J. B. C.; CORDEIRO, T. L.; LOPES, E. S. S. Utilização do Sistema de Monitoramento e Alerta de Desastres Naturais aplicado a situações de escorregamento - caso de Angra dos Reis. In: 14° SIMPÓSIO BRASILEIRO DE GEOGRAFIA FÍSICA APLICADA, 2011, Dourados, MS. Anais. 2011.</td>
+            <td>REIS, J. B. C.; CORDEIRO, T. L.; LOPES, E. S. S. <b>Utilização do Sistema de Monitoramento e Alerta de Desastres Naturais aplicado a situações de escorregamento - caso de Angra dos Reis.</b> In: 14° SIMPÓSIO BRASILEIRO DE GEOGRAFIA FÍSICA APLICADA, 2011, Dourados, MS. Anais. 2011.</td>
             <td><a href="docs/publications/escorregamentos_sismaden.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
             <td></td>
           </tr>
           <tr>
-            <td>RODRIGUES, S. C. Mapeamento de suscetibilidade a escorregamentos de Nova Friburgo-RJ por meio de inferência fuzzy e elaboração de cenários de alerta com uso do TerraMA2. Dissertação de Mestrado em Sensoriamento Remoto - INPE, 2013.</td>
+            <td>RODRIGUES, S. C. <b>Mapeamento de suscetibilidade a escorregamentos de Nova Friburgo-RJ por meio de inferência fuzzy e elaboração de cenários de alerta com uso do TerraMA2.</b> Dissertação de Mestrado em Sensoriamento Remoto - INPE, 2013.</td>
             <td><a href="docs/publications/carina_rodrigues_inpe_mestrado2013_novafriburgo.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
             <td></td>
           </tr>
           <tr>
-            <td>ARRUDA Jr.E.R.; LOPES, E.S.S. Análise morfométrica em sub-bacias hidrográficas para monitoramento do risco potencial a corridas de massa (debris flows) na região serrana do Rio de Janeiro. Congresso Brasileiro de Geologia de Engenharia e Ambiental (14) - SIBRADEN. Rio de Janeiro, 2013.</td>
+            <td>ARRUDA Jr.E.R.; LOPES, E.S.S. <b>Análise morfométrica em sub-bacias hidrográficas para monitoramento do risco potencial a corridas de massa (debris flows) na região serrana do Rio de Janeiro.</b> Congresso Brasileiro de Geologia de Engenharia e Ambiental (14) - SIBRADEN. Rio de Janeiro, 2013.</td>
             <td><a href="docs/publications/cbgeg_sibraden_elias_eymar.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a><br>
               <a href="docs/publications/cbgeg_sibraden_elias_eymar_apresentacao.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
               <td></td>
             </tr>
             <tr>
-              <td>BARBOSA, H.A.; SILVA, L.R.M.; SANTOS, A.M.; NETO, C.P.S. A STEP BEYOND VISUALIZATION: HOW TO INGEST METEOSAT SECOND GENERATION SATELLITE DATA AND PRODUCTS INTO McIDAS-V, ILWIS AND TerraMA2. Journal of Hyperspectral Remote Sensing. v.04, n.01, 01-15, 2014.</td>
+              <td>BARBOSA, H.A.; SILVA, L.R.M.; SANTOS, A.M.; NETO, C.P.S. <b>A STEP BEYOND VISUALIZATION: HOW TO INGEST METEOSAT SECOND GENERATION SATELLITE DATA AND PRODUCTS INTO McIDAS-V, ILWIS AND TerraMA².</b> Journal of Hyperspectral Remote Sensing. v.04, n.01, 01-15, 2014.</td>
               <td></td>
               <td><a href="docs/publications/meteosat_terrama2_humbertoleandro_jhrs_2014.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
             </tr>
             <tr>
-              <td>REIS, J.B.C. Monitoramento e alerta de inundação no município de Itajubá (MG) através de modelos matemáticos. Dissertação de Mestrado em Ciências em Meio Ambiente e Recursos Hídricos – Itajubá - MG, 2014.</td>
+              <td>REIS, J.B.C. <b>Monitoramento e alerta de inundação no município de Itajubá (MG) através de modelos matemáticos.</b> Dissertação de Mestrado em Ciências em Meio Ambiente e Recursos Hídricos – Itajubá - MG, 2014.</td>
               <td><a href="docs/publications/dissertacao_joao_unifei.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a><br>
                 <a href="docs/publications/dissertacao_joao_unifei_apresentacao.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
                 <td></td>
               </tr>
               <tr>
-                <td>Pimentel, A.S.; GALVÃO, A.S.; REIS, V.L. Plataforma de Monitoramento Ambiental TerraMA²: Elaboração do Banco de Estudo para Simulação de Alertas de Enchentes na Cidade de Rio Branco –Acre. In: 23 Seminário de Iniciação Científica – Rio Branco - AC, 2014.</td>
+                <td>Pimentel, A.S.; GALVÃO, A.S.; REIS, V.L. <b>Plataforma de Monitoramento Ambiental TerraMA²: Elaboração do Banco de Estudo para Simulação de Alertas de Enchentes na Cidade de Rio Branco –Acre.</b> In: 23 Seminário de Iniciação Científica – Rio Branco - AC, 2014.</td>
                 <td><a href="docs/publications/xxiii_seminario_ic_pibic_alanpimentel.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
                 <td></td>
               </tr>
               <tr>
-                <td>Pimentel, A.S.; REIS, V.L.; LOPES, E.S.S. Monitoramento e alerta de desastres naturais no Estado do Acre: Aplicação da plataforma TerraMA², PAP018515. In: 12 Simpósio de Recursos Hídricos do Nordeste – Natal - RN, 2014.</td>
+                <td>Pimentel, A.S.; REIS, V.L.; LOPES, E.S.S. <b>Monitoramento e alerta de desastres naturais no Estado do Acre: Aplicação da plataforma TerraMA²,</b> PAP018515. In: 12 Simpósio de Recursos Hídricos do Nordeste – Natal - RN, 2014.</td>
                 <td><a href="docs/publications/xii_srhn_natal_2014_alan.pdf" target="_blank"><img src="img/pdf-icon.png" width="30" height="40" alt=""></a></td>
                 <td></td>
               </tr>
